--- a/Modular/Beta/partials/compoundslist.html
+++ b/Modular/Beta/partials/compoundslist.html
@@ -16,7 +16,6 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th ng-show="selected_model">Likelihood Score</th>
                 <th>Img</th>
                 <th>MINE Id</th>
                 <th>Name</th>
@@ -24,8 +23,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr id="comp-row" ng-repeat="compound in filteredData" ui-sref="acompound.overview({id:compound.MINE_id})" style="cursor: pointer;">
-                <td  style="vertical-align:middle" ng-show="selected_model">{{(compound.Likelihood_score*1000).toFixed(1)}}</td>
+            <tr id="comp-row" ng-repeat="compound in filteredData" ng-class="color(compound.native_hit,compound.Likelihood_score)" ui-sref="acompound.overview({id:compound.MINE_id})" style="cursor: pointer;">
                 <td>
                     <img ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{compound._id}}.svg" width="150" ></td>
                 <td  style="vertical-align:middle">{{compound.MINE_id}}</td>
